keep icCube.sh sync'd w/ the production one